lab1/Test/L1-A-10-51.output
Error Type B at Line 4
Error Type A at Line 17
Error Type B at Line 23
Error Type B at Line 43
Error Type B at Line 45
Error Type B at Line 49
