lab1/Test/L1-A-10-51.cmm
int ;
struct xLM8h0HoeMo Rng9fF5eRVabQlaO8MiN [ 117507507 
  ] 
;] 
struct QlgJ0xbXvypSJvS ;
int ;
struct UbNGrFGnI8 ;
int ;
struct {
  int MUJzLV2W63 ;
}DEmQG ( ) {
  float jEi22Mi , DG9LJxXdcLKaNKIiwBAg = yG8ccKHX4uV9HGtU4Co 
    || xk - ry * - J_KmhPYkW3EZCy ( JXQZe8oG6TXCZoNh , 
    Bea4k = jMKDunpkQONQ && M_dWGSmeFekLHIRgv >= TPibV67p3wxna9AW0t 
    + lTeWd2j [ J2XIL > ( xxNImQnrmYpP3gSooCD < ! ! - 
    R6tTXzR5PROhFACO5jc [ g || k8SSGE_eb5fCt == ! ! KssRl7B7JPt9k 
    != 1508875850.2059128093 <= 1941914317 ] %) ] ) / 
    ! - AqAC2jVYBy ( ) . tOnlYJyng5VS4zyPeG ;
}
struct {
  int Jrnd2c ;
  struct {
    struct DQsveKYro22bQ7Q return {
    }MT5NGnAnN2MZOer8vT ;
  }aOFouX4Z6FvoUPYvd ;
};
int ;
int x7v5AnUD7Q_Uwfx ( int pH7S6xR5zqBMV ) {
  if ( EBb9cJInHJxQGuJ1SD20 ) {
  }else   if ( KhmWWR7npu )   ECWm78ix3 ;


}
int ;
int EoVQ , xqzy86hHqva24xU 

;
int ;
int ;
int ;
int ;
int AFiC ( int qaaGhv81Cx0 , int DDN ) {
  while ( BlxhKUNUkOlPZIPIK if )   if ( S9UXNR )   Obm4 
    ;
else struct   Wp ;


  return YGyyL0tw7iWDy ;
}] 
